MDEV-14660 Assertion failure in lock_move_rec_list_start() after instant ADD COLUMN

lock_move_rec_list_start(): Relax a too strict assertion.
This function can be invoked on the leftmost leaf page, after all.
So, the first record of each page can be a 'default row' record,
but the 'default row' record must never be locked.